<resources>
    <string name="app_name">GoLearning</string>
    <string name="componentes_nde_la_pc">Componentes \nbásicos de la PC</string>
    <string name="definition_componets">Los componentes de la PC son todos aquellos elementos internos que permiten que una computadora pueda funcionar de manera adecuada.</string>
    <string name="qu_es">¿Qué es?</string>
    <string name="paraque">¿Para qué sirve?</string>
    <string name="iconhardware">IconHardware</string>
    <string name="whatisicon">WhatisICON</string>
    <string name="placa_madre">Placa Madre</string>
    <string name="definition_mother_board">La Placa Madre permite conectar los otros componentes de la computadora,además, este componente se encarga de adecuar los voltajes al CPU</string>
    <string name="cpu">CPU</string>
    <string name="definition_cpu">Este se encarga de hacer las operaciones lógicas de una computadora, como cálculos matemáticos o gestión de procesos. De este componente depende la potencia de tu computadora. Las empresas que fabrican este componente son Intel y AMD, actualmente la que más destaca es AMD debido a su gran desempeño y calidad.</string>
    <string name="ram_title">Memoria RAM</string>
    <string name="definition_ram">La Memoria RAM sirve como \'almacenamiento temporal\' de alta velocidad para el PC, ya que sin este componente el CPU tendría que tomar todos los datos de la unidad de almacenamiento principal, lo cual es muy lento. Existen 5 tipos de memoria RAM DDR1, DDR1, DDR2, DDR4, DDR5, siendo este último el más reciente.</string>
    <string name="graphiccard_title">Tarjeta Gráfica</string>
    <string name="definition_graphic_card">La tarjeta gráfica es el componente que brinda la potencia necesaria a un ordenador para mostrar una interfaz de usuario, actualmente las tarjetas gráficas son creadas por NVIDIA y AMD, siendo NVIDIA la que desarrolla los mejores chips para alto desempeño para videojuegos (Serie GTX y Serie RTX) como para trabajos profesionales (Serie Quadro).</string>
    <string name="title_fuente_power">Fuente de Poder</string>
    <string name="definition_power_supply">Este componente se encarga de transformar la Corriente Alterna en Corriente Continua, para proveerla a los distintos componentes de la computadora según lo requieran.</string>
    <string name="definition_gabinete">Mucha gente confunde el gabinete con el CPU, pero no debe ser así, debido a que el gabinete es el que se encarga de resguardar los componentes para que eviten daños o golpes, manteniéndolos en una estructura sólida.</string>
    <string name="gabinete_title">Gabinete</string>
    <string name="SSD_title">Unidad de Almacenamiento</string>
    <string name="definition_sdd">La unidad de almacenamiento es la que se dedica a almacenar cada uno de los datos que tienes en tu ordenador, existen 2 formas de almacenar datos: Disco duro, Unidad de estado sólido(SSD SATA y Nvme SDD), el disco duro se considera una tecnología obsoleta, siendo totalmente remplazada de los ordenadores por los SSD.</string>
    <string name="dash_definition_web">En este bloque reconocerás los principios de la Web</string>
    <string name="dash_web_title">La Web</string>
    <string name="dash_definition_componetPC">En esta sección aprenderás los conocimientos básicos sobre los componentes de la PC</string>
    <string name="software_title">Software</string>
    <string name="dash_definition_software">En este bloque aprenderás los principios del software y su importancia en la computación actual</string>
    <string name="dash_ciber_title">Ciber-Seguridad</string>
    <string name="dash_ciber_definition">El internet está lleno de peligros por tal razón en esta sección aprenderás los principios para estar seguro en la red</string>
    <string name="network_title">Redes</string>
    <string name="dash_network_definition">El internet parece ser un mundo mágico donde todo funciona con un clic, pero detrás de eso se esconden un montón de protocolos y principios que conocerás brevemente en este bloque</string>
    <string name="ofimatic_title">Ofimática</string>
    <string name="dash_office_definition">El uso de los programas de Office son una de las habilidades más requeridas actualmente, por tal razón acá aprenderás brevemente un poco de ellos.</string>
    <string name="definition_web">Antes de iniciar a explicar qué es la Web, debemos tener en claro que la web y el internet no son la misma cosa. Una red es un conjunto de computadoras interconectadas, que permite que ellas puedan interactuar entre sí (enviando documentos, compartiendo archivos, entre otros), y la web, es un servicio que funciona a través de internet (más adelante explicaremos con detalles cómo funciona).</string>
    <string name="internet">Internet</string>
    <string name="internet_definition">Red global de computadoras (estructura).</string>
    <string name="definition_web_card">Conjunto de documentos electrónicos (página web) vinculadas entre si a través de enlaces, formando así una carretera gigantesca e interminable de información.</string>
    <string name="web_page">Página Web</string>
    <string name="web_page_definition">Documento electrónico que puede contener testos, imágnes, videos, etc.</string>
    <string name="web_site">Sitio Web</string>
    <string name="web_site_definition">Conjunto de páginas web estructuradas con un solo dominio, es decir cada una tiene relación importante con la otra.</string>
    <string name="server">Servidor Web</string>
    <string name="server_definition">Máquina(computadora) que está al servicio de otras máquinas (de usuarios), el cual tiene la función devolver información (páginas) cuando recibe peticiones por parte de estos.</string>
    <string name="DNS">DNS</string>
    <string name="dns_definition">Traduce los nombres de dominio de sitios web a direcciones IP para que los navegadores puedan cargar los recursos de éstos.</string>
    <string name="url">URL</string>
    <string name="url_definition">Una URL no es más que una dirección que es dada a un sitio o parte de este mismo para ser identificado en la web.</string>
    <string name="dominio">Dominio</string>
    <string name="dominio_definition">Es un nombre exclusivo que se le da a un sitio en la web para que cualquier usuario pueda visitarla.</string>
    <string name="slug">Slug</string>
    <string name="slug_definition">El slug, es la parte final de una URL que identifica una página dentro de un sitio web o una parte específica de la misma página.</string>
    <string name="enlace_link">Enlace / Link</string>
    <string name="enlace_definition">Los enlaces son hipervínculos de un documento electrónico (página web) el cual permite acceder automáticamente a otro documento u otra parte del mismo, por lo general estos van asociados a algún texto o una imagen, entonces, en cocas palabras, el enlace o link es igual a URL + imagen/texto.</string>
    <string name="navegador">Navegador</string>
    <string name="navigator_definition">Es un programa que permite el acceso a la Web, interpretando la información de distintos tipos de archivos y sitios web para que estos puedan ser vistos, ejemplo: Firefox, Chrome, Edge, etc.</string>
    <string name="buscador">Buscador</string>
    <string name="buscador_definition">Es una página web en la que buscamos información (página web) por medio de palabras clave sin necesidad de ingresar una URL, ejemplo de buscador: Google, DuckDuckGo, Yahoo, etc.</string>
    <string name="isp">ISP</string>
    <string name="isp_definition"><![CDATA[Empresa que nos brinda el servicio de conexión a internet, como: Tigo, AT&T, etc.]]></string>
    <string name="historia_nde_la_web">Historia\nde la Web</string>
    <string name="webhistory_content">La web, fue creada por un científico llamado Tim Berners Lee a finales de los años 80, con el objetivo de que la gente común pudiera tener acceso a un sin fín de documentos científicos, los cuales estarían enlazados entre sí (a través de hipervinculos/enlaces ) por internet sin necesidar de tener dominio sobre el área, esos documentos se denominan páginas web, pueden contener: texto, videos e imágenes, los cuales son capaces de llevarnos a otro documento(página) ya que pueden estár asociados a una URL que, como ya hemos mencionado, nos llevará a una parte del mismo sito u otro diferente. Así es que, todo el conjunto de páginas web entrelazadas que existen, se denomina web.</string>
    <string name="how_works_web">¿Cómo funciona la Web?</string>
    <string name="how_works_web_content">Si has entrado en una página desde un telefono o una computadora, te habrás podido dar cuenta que en la parte superior en donde va la URL de la web, aparece, http ó https, bien, esos dos términos, son llamados protocolos, los cuales se encargan de la transferencia de los datos en la web, ¿y cuál es la diferencia entre los dos? A simple vista, podemos apreciar de que uno tiene una S de más, pero… ¿qué significa esa S? Esa S, significa Secure, haciendo referencia a una certificación, la cual nos hace saber que la transferencia de datos es segura, es decir, los datos que viajan desde tu dispositivo hasta el servidor, están encapsulados, y cualquier persona que los intersepte no puede tener acceso a dicha información, es así que, si entras a una página o sitio web sin esa S y te pide informaicón personal, deberías pensar dos veces antes de poner ahí tus datos.</string>
    <string name="function_how_works_web_content">Para poder acceder a una página o sitio web, por detrás de la interfaz, se tienen que realizar una secuencia de pasos, los cuales se hacen en milésimas de segundo sin que nos diéramos cuentas. Pongamos un ejemplo, supongamos queremos abrir la página login de Facebook (página principal de registro o inicio de sesión del sitio) para ello debemos tener acceso a internet, y como sabemos, en el internet, para distinguir un dispositivo entre el montón, necesitamos una dirección IP (esta puede ser estática o pública) y, como habíamos mencionado, la web funciona a través de internet, es así que, para poder hacer uso de ella, primero debemos establecer una conexión entre nuestro dispositivo y el servidor que aloja el sitio web, usando el protocolo TCP/IP, tal vez te estarás preguntando ¿Y cómo sabemos cuál es la IP del servidor con el que queremos establecer conexión?, Ahí es donde entra en función el DNS, el cual nos traducirá lo que nosotros ingresamos en la barra de direcciones a la IP del mismo. Sigamos con el ejemplo. Nosotros al ingresar https://www.facebook.com en la barra de direcciones, lo que pasa por detrás, es que nuestro proveedor hace una consulta al servidor DNS, el cual buscará la IP asociada a dicho nombre de dominio, en este caso es “157.240.233.35”, para después devolvérnosla, ya teniendo esa IP de dicho sitio, nuestro navegador establecerá una conexión entre nuestro dispositivo y el servidor que lo aloja, para después hacer las peticiones pertinentes a través del protocolo http, dichas peticiones harán que el servidor nos devuelva lo que nosotros estamos pidiendo, en este caso, el login de Facebook.</string>
    <string name="hold_web_content_history">Pulsa aquí para ver la historia de la web</string>
    <string name="concept">Conceptos</string>
    <string name="networks_title">Redes</string>
    <string name="network_definition">Una red puede definirse como un conjunto de dispositivos interconectados que intercambian información.</string>
    <string name="network_components">Componentes de Red</string>
    <string name="description_network_components">En esta sección conocerás los componentes de red</string>
    <string name="basic_network">Realizar una red básica</string>
    <string name="description_basic_network">En esta sección realizaras una red básica con Cisco Packet Tracer</string>
    <string name="swich">Swich</string>
</resources>